packages/language/src/__tests__/__fixtures__/invalid/syntax-errors.eligian
// File with syntax errors for testing error recovery

// Missing timeline
endable action intro [
  selectElement("#title")
  addClass("visible")
] [
  removeClass("visible")
]

// Invalid time range (missing ..)
timeline "test" using raf {
  at 5-10 [
    selectElement("#content")
  ] [
  ]
}

// Missing closing bracket
timeline "test2" using raf {
  at 10s..15s [
    selectElement("#test")
  // Missing closing brackets

// Invalid syntax
timeline "test3" using raf {
  at 15s..20s [
    selectElement(@invalid)
  ] [
  ]
}
